--- a/使用教程.md
+++ b/使用教程.md
@@ -2,21 +2,22 @@
     <img width="100" src="https://Pollen-Z.github.io/images/LOGO-.png" alt="logo" />
 </p>
 
-<p align="center"><b> HaoranZing </b>- 网易云音乐下载器，值得一试。</p>
+<p align="center"><b>🎶 HaoranZing </b> 网易云音乐下载器，值得一试 🎶</p>
 
 ------------------------------
+## 💻 使用教程
 
-#### 打开 [网易云音乐](https://music.163.com/) ， ` 搜索 ` 你想要下载的歌曲（这里以”光辉岁月“为例）
+#### ⭐ 打开 [网易云音乐](https://music.163.com/) ， ` 搜索 ` 你想要下载的歌曲（这里以”光辉岁月“为例）
 ![1](https://pollen-z.github.io/images/1.png)
-#### 点击你想下载的歌曲，进入歌曲的 ` 详细界面 `
+#### ⭐ 点击你想下载的歌曲，进入歌曲的 ` 详细界面 `
 ![2](https://pollen-z.github.io/images/2.png)
-#### 在页面上方复制该页面的 ` 网址 `
+#### ⭐ 在页面上方复制该页面的 ` 网址 `
 ![3](https://pollen-z.github.io/images/3.png)
-#### 打开 [网易云音乐下载器](https://haoranzing.rth1.one/) ，并在输入框粘贴刚刚复制下来的网址，点击 ` 下载 `
+#### ⭐ 打开 [网易云音乐下载器](https://haoranzing.rth1.one/) ，并在输入框粘贴刚刚复制下来的网址，点击 ` 下载 `
 ![4](https://pollen-z.github.io/images/4.png)
-#### 点击右侧的 ` 三个点 `
+#### ⭐ 点击右侧的 ` 三个点 `
 ![5](https://pollen-z.github.io/images/5.png)
-#### 点击 ` 下载 ` 按钮即可下载音频
+#### ⭐ 点击 ` 下载 ` 按钮即可下载音频
 ![6](https://pollen-z.github.io/images/6.png)
 
 ------------------------------
@@ -25,4 +26,5 @@
     <img width="100" src="https://Pollen-Z.github.io/images/LOGO-.png" alt="logo" />
 </p>
 
-<p align="center"><b>HaoranZing </b> - 网易云音乐下载器，值得一试。</p>
+<p align="center"><b> ⭐ HaoranZing </b> - 网易云音乐下载器，值得一试 ⭐ </p>
+
